dokonczenie naglowka i zrobienie stopki

--- a/cinema-city.html
+++ b/cinema-city.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Tytuł strony</title>
+    <title>cinemacityhtml</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Filip Jablonski">
@@ -52,16 +52,15 @@
 
         <nav class="orangebg">
             <ul>
-                <li>
-                    <a href="#">
-                        WHAT'S ON 
-                    </a>
-                </li>
-                <li><a href="#">OFFERS</a></li>
-                <li><a href="#">GIFTS</a></li>
-                <li><a href="#">BLOG </a></li>
-                <li><a href="#">UBLIMITED</a></li>
+                <li><a href="#">REPERTUAR</a></li>
+                <li><a href="#">OFERTY</a></li>
+                <li><a href="#">PREZENTY</a></li>
+                <li><a href="#">BLOG</a></li>
+                <li><a href="#">UNLIMITED</a></li>
                 <li><a href="#">4DX</a></li>
+                <li><a href="#">IMAX</a></li>
+                <li><a href="#">SCREENX </a></li>
+                <li><a href="#">VIP</a></li>
             </ul>
         </nav>
     </header>
@@ -74,37 +73,110 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod labore porro placeat alias. Eius veritatis consequatur voluptatibus dolorem voluptates nemo dignissimos nostrum tempora suscipit expedita, laborum laboriosam saepe earum error.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, veniam at enim, sunt corrupti assumenda harum doloribus, iure perferendis molestias distinctio! Accusamus ut vitae saepe nisi atque vel voluptas sapiente.
         </p>
-    <!-- <footer class="mainfooter">
         <hr>
-        <article class="infooter">
-            <ul>
-                <h3 id="aboutus">About Us </h1>
-                <li><a href="#">cinema city poland</a></li>
-                <li><a href="#">work with us</a></li>
-                <li><a href="#">newsletter </a></li>
-                <li><a href="#">contact us</a></li>
-            </ul>
 
-            <ul>
-                <h3 id="aboutus">links </h1>
-
-                <li><a href="#">s</a></li>
-                <li><a href="#">aa</a></li>
-                <li><a href="#">22 </a></li>
-                <li><a href="#">s</a></li>
-            </ul>
-
-            <ul>
-                <h3 id="aboutus">information </h1>
-
-                <li><a href="#">asda</a></li>
-                <li><a href="#">GsdadIFTS</a></li>
-                <li><a href="#">sda </a></li>
-                <li><a href="#">12</a></li>
-                <li><a href="#">a</a></li>
-            </ul>
-        </article>
-        <p id ="rights">All right reserved to Filip Jab</p> -->
+    <footer class="mainfooter">
+        <nav class="footer_menu">
+            <section>
+                <h4 class="footer-heading">O NAS</h4>
+                <ul>
+                    <li><a href="#">Cinema City Poland</a></li>
+                    <li><a href="#">Pracuj z nami</a></li>
+                    <li><a href="#">Newsletter</a></li>
+                    <li><a href="#">Kontakt</a></li>
+                </ul>
+            </section>
+            <section>
+                <h4 class="footer-heading">LINKI</h4>
+                <ul>
+                    <li><a href="#">Global City Holdings</a></li>
+                    <li><a href="#">Reklama w kinach</a></li>
+                    <li><a href="#">Forum Film Poland</a></li>
+                </ul>
+            </section>
+            <section>
+                <h4 class="footer-heading">INFORMACJE</h4>
+                <ul>
+                    <li><a href="#">Regulacje</a></li>
+                    <li><a href="#">Polityka prywatności</a></li>
+                    <li><a href="#">Zarządzaj plikami cookies</a></li>
+                    <li><a href="#">Polityka cookies</a></li>
+                    <li><a href="#">Informacja o strategii podatkowej</a></li>
+                </ul>
+            </section>
+            <section >
+                <h4 class="footer-heading">OBSERWUJ NAS</h4>
+                <ul>
+                    <li id="fblogo"><a href="#">Facebook</a></li>
+                    <li id="instlogo"><a href="#">Instagram</a></li>
+                    <li id="ytlogo"><a href="#">YouTube</a></li>
+                    <li id="LinkedIn"><a href="#">LinkedIn</a></li>
+                </ul>
+                <h4 class="footer-heading">POBIERZ APLIKACJE</h4>
+                <ul>
+                    <li id="andlogo"><a href="#">Android</a></li>
+                    <li id="ioslogo"><a href="#">iOS</a></li>
+                </ul>
+            </section>
+        </nav>
+        <h5 id="rights">Wszystkie prawa zastrzeżone Filip</h5>
     </footer>
+            <!-- <nav>
+                <ul class="footer_menu">
+                    <li>
+
+                        <ul>
+                            <h4 class="footer_h4">O NAS</h4>
+                            <li>Cinema City Poland</li>
+                            <li>Pracuj z nami</li>
+                            <li>Newsletter</li>
+                            <li>Kontakt</li>
+                        </ul>
+                    </li>
+                    <li>
+
+                        <ul>
+                            <h4 class="footer_h4">LINKI</h4>
+                            <li>Global City Holdings</li>
+                            <li>Reklama w kinach</li>
+                            <li>Forum Film Poland</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <ul>
+                            <h4 class="footer_h4">INFORMACJE</h4>
+                            <li>Regulacje</li>
+                            <li>Polityka prywatności</li>
+                            <li>Zarządaj pilkami cookies</li>
+                            <li>Polityka cookies</li>
+                            <li>Informacja o strategii podatkowej</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <ul>
+
+
+                                <ul>
+                                    <h4 class="footer_h4">OBSERWUJ NAS</h4>
+                                    <li>Facebook</li>
+                                    <li>Instagram</li>
+                                    <li>YouTube</li>
+                                    <li>LinkedIn</li>
+                                </ul>
+
+                        </ul>
+                        <ul>
+                            <ul>
+                                <h4 class="footer_h4">POBIERZ APLIKACJE</h4>
+                                <li>Android</li>
+                                <li>iOS</li>
+                            </ul>
+
+                        </ul>
+                    </li>
+                </ul>
+            </nav> -->
+
+
 </body>
 </html>
