--- a/cinema-city.html
+++ b/cinema-city.html
@@ -88,13 +88,15 @@
             </ul> 
         </nav>
     </header>
-    
+
     <article class="movieposter_1">
         <a target="_blank" href="http://127.0.0.1:5500/cinema-city.html#" >
             <img src="imgs/movieposter_1.jpg" alt="ourLogo" > 
         </a>
     </article>
     <main>
+
+
         <p class="loremi">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, libero! Similique odit ullam laudantium! Minima nobis impedit, assumenda ipsum consequatur quis odio porro sed ipsa tempora harum in labore fugit.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aliquid maxime nisi ut, blanditiis alias ex exercitationem eligendi. Ex quas, sint laborum nesciunt aspernatur temporibus omnis. Optio nisi corrupti aut!
@@ -103,6 +105,166 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod labore porro placeat alias. Eius veritatis consequatur voluptatibus dolorem voluptates nemo dignissimos nostrum tempora suscipit expedita, laborum laboriosam saepe earum error.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, veniam at enim, sunt corrupti assumenda harum doloribus, iure perferendis molestias distinctio! Accusamus ut vitae saepe nisi atque vel voluptas sapiente.
         </p>
+        
+        <aside class="aside_nav">
+            <nav class="aside_nav__nav">
+                <a href="#"><img src="asideimgs/01.jpg"></a>
+                <a href="#"><img src="asideimgs/bar 300x140 px PL.jpg"></a>
+                <a href="#"><img src="asideimgs/CC_screenx_300x140.jpg"></a>
+            </nav>
+        </aside>
+        <section class="toolbar">
+            <nav class="toolbar__nav">
+                <ul>
+                    <li><input type="radio" value="aaa" name="article-selector" id="aaa" checked><label for="aaa">POLECAMY</label></li>
+                    <li><input type="radio" value="bbb" name="article-selector" id="bbb" ><label for="bbb">NIE PRZEGAP</label></li>
+                    <li><input type="radio" value="ccc" name="article-selector" id="ccc" ><label for="ccc">BAR</label></li>
+                    <li><input type="radio" value="ddd" name="article-selector" id="ddd" ><label for="ddd">FIRMY</label></li>
+                    <li><input type="radio" value="eee" name="article-selector" id="eee" ><label for="eee">SZKOŁY</label></li>
+                    <li><input type="radio" value="fff" name="article-selector" id="fff" ><label for="fff">WYDARZENIA</label></li>
+                </ul>
+            </nav>
+
+            <article class="toolbar__art" id="aaa">
+                <figure>
+                    <a href="#" class="toolbar__art toolbar__art-first_img"><img src="toolbarsection/polecamy/CC_Unlimited Promobox 600x514.jpg"></a>
+                    <div>
+                        <a href="#"><img src="toolbarsection/polecamy/new 4DX promobox 300x120.jpg"></a>
+                        <a href="#"><img src="toolbarsection/polecamy/promo-mid-imax.jpg"></a>
+                    </div>
+                </figure>
+                <aside>
+                    <hr>
+                    <a href="#">
+                    <h6>SCREENX</h6>
+                    <p>Poczuj głebię filmu</p>
+                    </a>
+                    <hr>
+                    <a href="#">
+                    <h6>VIP</h6>
+                    <p>Poczuj magię kina bez limitu</p>
+                    </a>
+                    <hr>
+                </aside>
+            </article>
+
+            <article class="toolbar__art" id="bbb">
+                <figure>
+                    <a href="#" class="toolbar__art toolbar__art-first_img"><img src="toolbarsection/bar/bar 600x514 PL.jpg"></a>
+                    <div>
+                        <a href="#"><img src="toolbarsection/bar/COSTA oscarowy duet 300 x 120 PL.jpg"></a>
+                        <a href="#"><img src="toolbarsection/bar/ICEE MUSO MRO_O 300x120.jpg"></a>
+                    </div>
+                </figure>
+                <aside>
+                    <hr>
+                    <a href="#">
+                    <h6>SCREENX</h6>
+                    <p>Poczuj głebię filmu</p>
+                    </a>
+                    <hr>
+                    <a href="#">
+                    <h6>VIP</h6>
+                    <p>Poczuj magię kina bez limitu</p>
+                    </a>
+                    <hr>
+                </aside>
+            </article>
+
+            <article class="toolbar__art" id="ccc">
+                <figure>
+                    <a href="#" class="toolbar__art toolbar__art-first_img"><img src="toolbarsection/polecamy/CC_Unlimited Promobox 600x514.jpg"></a>
+                    <div>
+                        <a href="#"><img src="toolbarsection/polecamy/new 4DX promobox 300x120.jpg"></a>
+                        <a href="#"><img src="toolbarsection/polecamy/promo-mid-imax.jpg"></a>
+                    </div>
+                </figure>
+                <aside>
+                    <hr>
+                    <a href="#">
+                    <h6>SCREENX</h6>
+                    <p>Poczuj głebię filmu</p>
+                    </a>
+                    <hr>
+                    <a href="#">
+                    <h6>VIP</h6>
+                    <p>Poczuj magię kina bez limitu</p>
+                    </a>
+                    <hr>
+                </aside>
+            </article>
+
+            <article class="toolbar__art" id="ddd">
+                <figure>
+                    <a href="#" class="toolbar__art toolbar__art-first_img"><img src="toolbarsection/bar/bar 600x514 PL.jpg"></a>
+                    <div>
+                        <a href="#"><img src="toolbarsection/bar/COSTA oscarowy duet 300 x 120 PL.jpg"></a>
+                        <a href="#"><img src="toolbarsection/bar/ICEE MUSO MRO_O 300x120.jpg"></a>
+                    </div>
+                </figure>
+                <aside>
+                    <hr>
+                    <a href="#">
+                    <h6>SCREENX</h6>
+                    <p>Poczuj głebię filmu</p>
+                    </a>
+                    <hr>
+                    <a href="#">
+                    <h6>VIP</h6>
+                    <p>Poczuj magię kina bez limitu</p>
+                    </a>
+                    <hr>
+                </aside>
+            </article>
+
+            <article class="toolbar__art" id="eee">
+                <figure>
+                    <a href="#" class="toolbar__art toolbar__art-first_img"><img src="toolbarsection/polecamy/CC_Unlimited Promobox 600x514.jpg"></a>
+                    <div>
+                        <a href="#"><img src="toolbarsection/polecamy/new 4DX promobox 300x120.jpg"></a>
+                        <a href="#"><img src="toolbarsection/polecamy/promo-mid-imax.jpg"></a>
+                    </div>
+                </figure>
+                <aside>
+                    <hr>
+                    <a href="#">
+                    <h6>SCREENX</h6>
+                    <p>Poczuj głebię filmu</p>
+                    </a>
+                    <hr>
+                    <a href="#">
+                    <h6>VIP</h6>
+                    <p>Poczuj magię kina bez limitu</p>
+                    </a>
+                    <hr>
+                </aside>
+            </article>
+
+            <article class="toolbar__art" id="fff">
+                <figure>
+                    <a href="#" class="toolbar__art toolbar__art-first_img"><img src="toolbarsection/bar/bar 600x514 PL.jpg"></a>
+                    <div>
+                        <a href="#"><img src="toolbarsection/bar/COSTA oscarowy duet 300 x 120 PL.jpg"></a>
+                        <a href="#"><img src="toolbarsection/bar/ICEE MUSO MRO_O 300x120.jpg"></a>
+                    </div>
+                </figure>
+                <aside>
+                    <hr>
+                    <a href="#">
+                    <h6>SCREENX</h6>
+                    <p>Poczuj głebię filmu</p>
+                    </a>
+                    <hr>
+                    <a href="#">
+                    <h6>VIP</h6>
+                    <p>Poczuj magię kina bez limitu</p>
+                    </a>
+                    <hr>
+                </aside>
+            </article>
+        </section>
+
+
 
         <article id="blog">
             <h1 >BLOG</h1>
