Commit przed próbą uporządkowania wszystkiego :)

--- a/cinema-city.html
+++ b/cinema-city.html
@@ -78,8 +78,8 @@
             <ul class="orangebg__navbar">
                 <li><a href="#">REPERTUAR</a></li>
                 <li><a href="#">OFERTY</a></li>
-                <li><a href="#">PREZENTY</a></li>
-                <li><a href="#">BLOG</a></li>
+                <li><a href="prezenty.html">PREZENTY</a></li>
+                <li><a href="blog.html">BLOG</a></li>
                 <li><a href="#">UNLIMITED</a></li>
                 <li><a href="#">4DX</a></li>
                 <li><a href="#">IMAX</a></li>
