New section - gifts

--- a/HTML/prezenty.html
+++ b/HTML/prezenty.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Blog - CinemaCity</title>
@@ -86,9 +86,9 @@
                 <li><a href="#">VIP</a></li>
             </ul> 
         </nav>
-    </header>
+    </header> -->
     <nav class="start_blog">
-        <a href="cinema-city.html">Start</a>
+        <a href="../PHP/index.php">Start</a>
         <p>Prezenty</p>
     </nav>
     <main class="Prezenty">
@@ -98,13 +98,13 @@
         </header>
         <section class="Prezenty__section">
             <div>
-                <img src="prezenty/karta-podarunkowa_card_pl.jpg">
+                <img src="../IMAGES/prezenty/karta-podarunkowa_card_pl.jpg">
                 <h4>karta podarunkowa</h4>
                 <p>Karta Podarunkowa Cinema City to prezent idealny. Podaruj bliskiej osobie bilety do kina na dowolny seans lub bilety z zestawem Duet. Prezent kupisz szybko i wygodnie w kasie kina Cinema City.</p>
                 <a href="#">szczegóły i zakup</a>
             </div>
             <div>
-                <img src="prezenty/unlimited_gift_card.jpg">
+                <img src="../IMAGES/prezenty/unlimited_gift_card.jpg">
                 <h4>karta podarunkowa unlimited</h4>
                 <p>Karta podarunkowa UNLIMITED to wyjątkowy prezent na każdą okazję. Osoba obdarowana kartą zyskuje roczny dostęp do filmów bez limitu na ekranach kin Cinema City w całej Polsce.</p>
                 <a href="#">szczegóły i zakup</a>
@@ -115,7 +115,7 @@
             <a href="#">SPRAWDŹ JEGO SZCZEGÓŁY</a>
         </aside>
     </main>
-
+<!-- 
 </main>
 </body>
-</html>
+</html> -->
