--- a/cinema-city.html
+++ b/cinema-city.html
@@ -8,6 +8,7 @@
     <meta name="keywords" content="slowakluczowe"> 
     <meta name="description" content="opis">
     <link rel = "stylesheet" href = "style_nauka.css" >  
+
     <link href="Icons/bot_smile_robot_robo_chatbot_assistant_advisor_icon_256856.ico" type="image/x-icon" rel="shortcut icon">
 </head>
 
@@ -95,8 +96,6 @@
         </a>
     </article>
     <main>
-
-
         <p class="loremi">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa, libero! Similique odit ullam laudantium! Minima nobis impedit, assumenda ipsum consequatur quis odio porro sed ipsa tempora harum in labore fugit.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt aliquid maxime nisi ut, blanditiis alias ex exercitationem eligendi. Ex quas, sint laborum nesciunt aspernatur temporibus omnis. Optio nisi corrupti aut!
@@ -303,6 +302,7 @@
             <button id="blog__button">
                 <p>Zobacz wszystkie artykuły na blogu</p>
             </button>
+        </article>
         </main>
         <hr>
 
